--- a/data-visualization/titanic-fx-view/src/main/resources/org/onebeartoe/development/tools/titanic/fx/view/secondary.fxml
+++ b/data-visualization/titanic-fx-view/src/main/resources/org/onebeartoe/development/tools/titanic/fx/view/secondary.fxml
@@ -5,10 +5,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
 
+
+<?import javafx.scene.chart.*?>
+
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.onebeartoe.development.tools.titanic.fx.view.SecondaryController">
     <children>
         <Label text="Secondary View" />
         <Button fx:id="secondaryButton" text="Switch to Primary View" onAction="#switchToPrimary" />
+                <Button id="button1" layoutX="10" layoutY="10" text="Click to load PieChart 1" onAction="#handleButton1Action" fx:id="button1" />
+        <Button id="button2" layoutX="10" layoutY="40" text="Click to load PieChart 2" onAction="#handleButton2Action" fx:id="button2" />
+        <Button id="buttonclear" layoutX="10" layoutY="70" text="Clear PieChart" onAction="#handleButtonClearAction" fx:id="buttonclear" />
+        
+        <PieChart id="piechart" fx:id="piechart" layoutX="10" layoutY="110" />
     </children>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
