--- a/android/adb-tool/src/main/resources/fxml/Scene.fxml
+++ b/android/adb-tool/src/main/resources/fxml/Scene.fxml
@@ -17,7 +17,8 @@
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                        <BorderPane prefHeight="392.0" prefWidth="280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <BorderPane prefHeight="392.0" prefWidth="280.0" 
+                                    AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <top>
                                 <Label fx:id="label2" minHeight="16" minWidth="69" text="input text:" BorderPane.alignment="CENTER" />
                            </top>
